# rustica

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  MIGRATION_v0.11.0.md  NOTICE  README.md  TODO.md  benchmarks.html  biome.json  clippy.toml  crates.js  deny.toml  index.html  output.txt  package.json  pnpm-lock.yaml  release.toml  rustfmt.toml  styles.css
.github/: dependabot.yml
.github/scripts/: readme_to_index.py
.github/workflows/: benchmark.yml  code-quality.yml  create-release.yml  generator-generic-ossf-slsa3-publish.yml  publish-crates.yml  rust.yml
.hooks/: pre-commit  pre-push
benches/: datatypes_benchmarks.rs  regression.rs
benches/datatypes/: async_monad.rs  choice.rs  composable_error.rs  cont.rs  either.rs  id.rs  io.rs  iso_lens.rs  iso_prism.rs  lazy_error.rs  lens.rs  maybe.rs  mod.rs  prism.rs  pvec.rs  pvec_memory.rs  reader.rs  state.rs  validated.rs  wrapper.rs  writer.rs
coverage/: tarpaulin-report.html
criterion/report/: index.html
docs/: DOCTEST_GUIDELINES.md  PERFORMANCE.md  TUTORIAL.md  async_programming_guide.md  case_study_web_api_validation.md  category_theory.md  getting_started.md  help.html  index.md  search-index.js  settings.html  src-files.js  state_management_guide.md
docs/rustica/: all.html  index.html  macro.pvec!.html  macro.pvec.html
examples/: advanced_parser.rs  async_programming_guide.rs  benchmark_analysis.rs  case_study_web_api_validation.rs  categorical_utils_demo.rs  choice_migration_v0_11_0.rs  error.rs  error_handling.rs  identity_migration_v0_11_0.rs  readme.rs
rustica/: index.html  macro.pvec.html  sidebar-items.js
rustica/datatypes/: index.html
rustica/prelude/: index.html
rustica/pvec/: index.html  macro.pvec.html  struct.AlwaysCache.html  struct.ChunksIter.html  struct.IntoIter.html  struct.Iter.html  struct.MemoryManager.html  struct.NeverCache.html  type.BoxedCachePolicy.html
rustica/traits/: index.html
rustica/transformers/: fn.lift.html  index.html
rustica/utils/: index.html  sidebar-items.js
scripts/: run_pvec_benchmarks.sh
src/: fntype.rs  lib.rs  prelude.rs  pvec.rs
src/category/: applicative.rs  arrow.rs  bifunctor.rs  category.rs  comonad.rs  composable.rs  compose.rs  contravariant_functor.rs  evaluate.rs  flatmap.rs  foldable.rs  function_category.rs  functor.rs  hkt.rs  identity.rs  lens.rs  mod.rs  monad.rs  monoid.rs  pure.rs  semigroup.rs  sequence.rs  traversable.rs
src/datatypes/: async_monad.rs  choice.rs  cont.rs  either.rs  free.rs  id.rs  io.rs  iso_lens.rs  iso_prism.rs  lens.rs  maybe.rs  mod.rs  prism.rs  reader.rs  state.rs  validated.rs  writer.rs
src/error/: context.rs  convert.rs  core.rs  macros.rs  mod.rs  types.rs
src/monads/: async_monad.rs  cont.rs  either.rs  free.rs  io.rs  maybe.rs  mod.rs  reader.rs  state.rs  validated.rs  writer.rs
src/prelude/: category.rs  datatypes.rs  error.rs  traits.rs  traits_ext.rs  transformer.rs  transformers.rs  utils.rs  wrapper.rs
src/pvec/: cache.rs  chunk.rs  core.rs  error.rs  iter.rs  iterator.rs  memory.rs  mod.rs  node.rs  traits.rs  tree.rs  vector.rs
src/tools/: benchmark_analyzer.rs  mod.rs
src/traits/: alternative.rs  applicative.rs  arrow.rs  bifunctor.rs  category.rs  comonad.rs  composable.rs  contravariant_functor.rs  distributive.rs  divisible.rs  enhanced_hkt.rs  error_mapper.rs  evaluate.rs  foldable.rs  functor.rs  hkt.rs  identity.rs  iso.rs  mod.rs  monad.rs  monad_error.rs  monad_plus.rs  monoid.rs  natural.rs  natural_transformation.rs  profunctor.rs  pure.rs  representable.rs  semigroup.rs  sequence.rs  transform.rs  traversable.rs
src/transformer/: mod.rs
src/transformers/: cont_t.rs  identity.rs  mod.rs  monad_transformer.rs  (+3 more)
styles/: styles.css
tests/: applicative_laws.rs  error_utils_test.rs  functor_laws.rs  maybe_error_test.rs  mod.rs  monad_laws.rs  test_readme_to_index.py
(+4244 files in other folders)
